--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,21 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  /* color: var(--foreground); */
+  /* background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -24,4 +13,26 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+.header{
+    background-color: gray;
+    text-align: center;
+    padding: 20px;
+}
+.Child-Header{
+    margin-left: 50px;
+    text-transform: uppercase;
+}
+.header-para{
+    background-color: blue;
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+    margin-top: 50px;
+}
+.header-para1{
+    background-color: burlywood;
+    color: brown;
+    text-align: center;
+    padding-top: 50px;
 }
